# manim-fonts

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  python-publish.yml  test.yml
examples/: caveat_font.py  chivo_font.py
src/manim_fonts/: __init__.py  _logging.py  config.py  download.py  register_font.py  search.py  utils.py
tests/: test_manim_fonts.py
