[tool.poetry]
name = "manim-fonts"
version = "0.3.0"
description = "Use Fonts from Internet With Manim."
authors = ["Naveen M K <naveen@manim.community>"]
license = "BSD-3-Clause"
readme="README.md"
repository="https://github.com/naveen521kk/manim-fonts"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
manim = ">=0.3.0"
requests = ">=2.0.0"
appdirs= ">=1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^22.10"

[tool.poetry.plugins."manim.plugins"]
"manim_fonts" = "manim_fonts"

[tool.isort]
# from https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
